--- a/src/app/editar-tienda/editar-tienda.page.html
+++ b/src/app/editar-tienda/editar-tienda.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>EDITAR TIENDA</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title color="light">EDITAR TIENDA</ion-title>
   </ion-toolbar>
 </ion-header>
 
