--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -14,11 +14,11 @@
 
   <form>
     <ion-item lines="full" >
-      <ion-label color="primary" position="floating" >CORREO ELECTRÓNICO </ion-label>
+      <ion-label position="floating" >CORREO ELECTRÓNICO </ion-label>
       <ion-input type="text" #email required clearInput></ion-input>
     </ion-item>
     <ion-item lines="full">
-      <ion-label color="primary" position="floating">CONTRASEÑA</ion-label>
+      <ion-label position="floating">CONTRASEÑA</ion-label>
       <ion-input type="password" #password required clearInput value=""></ion-input>
     </ion-item>
     <br><br>
@@ -36,9 +36,9 @@
     </ion-row>
   </form>
   <ion-row>
-    <ion-col color="secondary">
+    <ion-col >
       <p color="secondary" class="ion-text-end">
-        <a color="secondary" routerLink="/forgot-password" >¿Se te olvidó tu contraseña?</a>
+        <a  routerLink="/forgot-password" >¿Se te olvidó tu contraseña?</a>
       </p>
     </ion-col>
   </ion-row>
@@ -46,7 +46,7 @@
   <ion-row>
     <ion-col>
       <p class="ion-text-end">
-        <a color="secondary" routerLink="/register">Crea una cuenta</a>
+        <a  routerLink="/register">Crea una cuenta</a>
       </p>
     </ion-col>
   </ion-row>
