--- a/src/app/forgot-password/forgot-password.page.html
+++ b/src/app/forgot-password/forgot-password.page.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
 
-    <ion-title>RESTABLECER</ion-title>
+    <ion-title color="light">RESTABLECER</ion-title>
     
    
 
