--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,6 +1,6 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>REGISTRO</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title color="light">REGISTRO</ion-title>
   </ion-toolbar>
 </ion-header>
 
