--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -94,6 +94,15 @@
     --ion-color-tint: var(--ion-color-favorite-tint);
   }
 
+  
+  .ion-color-content {
+    --ion-color-base: #133b86;
+    --ion-color-base-rgb: var(--ion-color-favorite-rgb);
+    --ion-color-contrast: var(--ion-color-favorite-contrast);
+    --ion-color-contrast-rgb: var(--ion-color-favorite-contrast-rgb);
+    --ion-color-shade: var(--ion-color-favorite-shade);
+    --ion-color-tint: var(--ion-color-favorite-tint);
+  }
 
 
 
@@ -336,7 +345,7 @@
   --ion-background-color: #000000;
   --ion-background-color-rgb: 0,0,0;
 
-  --ion-text-color:#000000;
+  --ion-text-color:#05ada2;
   --ion-text-color-rgb: 255,255,255;
 
   --ion-color-step-50: #0d0d0d;
@@ -376,7 +385,7 @@
   --ion-background-color: #121212;
   --ion-background-color-rgb: 18,18,18;
 
-  --ion-text-color:#000000;
+  --ion-text-color:#05ada2;
   --ion-text-color-rgb: 255,255,255;
 
   --ion-border-color: #222222;
@@ -408,4 +417,5 @@
   --ion-tab-bar-background: #1f1f1f;
 
   --ion-card-background: #1e1e1e;
+  
 }
