--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -15,15 +15,16 @@
       <ion-label position="floating">Contraseña</ion-label>
       <ion-input type="password" #password required></ion-input>
     </ion-item>
-
+<br><br>
     <ion-row>
       <ion-col>
         <ion-button type="submit" (click)="onRegister(email,password)" expand="block">Registrar</ion-button>
       </ion-col>
     </ion-row>
   </form>
+  <br><br>
   <ion-row>
-    <ion-col>
+    <ion-col class="ion-text-end">
       <p >
         <a routerLink="/login">Inicio sesión</a>
       </p>
