--- a/src/app/editar-tienda/editar-tienda.page.html
+++ b/src/app/editar-tienda/editar-tienda.page.html
@@ -11,12 +11,12 @@
   </ion-item>
 
   <ion-item lines="full">
-    <ion-label position="floating">Nombre de la tienda</ion-label>
+    <ion-label position="floating">Descripcion</ion-label>
     <ion-input type="text" #descripcionEdit required clearInput value="{{ descripcion() }}"></ion-input>
   </ion-item>
 
   <ion-item lines="full">
-    <ion-label position="floating">Nombre de la tienda</ion-label>
+    <ion-label position="floating">Precio</ion-label>
     <ion-input type="text" #precioEdit required clearInput value="{{ precio() }}"></ion-input>
   </ion-item>
 
